infra/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cst-rakuten-backend-service
  namespace: rakuten
spec:
  type: NodePort
  selector:
    app: cst-rakuten-backend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 4000
