infra/kubernetes/ingress-homolog.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cst-rakuten-backend-ingress
  namespace: rakuten
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - homolog.api.rakuten.oondemand.com.br
      secretName: app-tls
  rules:
    - host: homolog.api.rakuten.oondemand.com.br
      http:
        paths:
          - path: /cst-rakuten(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: cst-rakuten-backend-service
                port:
                  number: 80
